# ChangeLog for dev-lang/scala
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/scala/ChangeLog,v 1.39 2014/10/06 03:26:42 gienah Exp $

  06 Oct 2014; Mark Wright <gienah@gentoo.org>
  -files/scala-2.10.3-maven-deps.patch, scala-2.10.3.ebuild,
  scala-2.10.4.ebuild:
  Fix Bug 501176 - dev-lang/scala-2.10.3 - ../work/scala-2.10.3/build.xml:175:
  Unable to resolve artifact: Missing: junit:junit:jar:4.10. Thanks to Another
  Mortal for testing, Juergen Rose and Christian Strahl for helping. I replaced
  the scala-2.10.3-maven-deps.patch with the sed I created as part of the fix
  for bug 501176 and bug 517166. For scala-2.10.3 the scala-2.10.3-maven-
  deps.tar.gz was missing more stuff that was downloaded from maven central
  during the build, added these additional files to scala-2.10.3-maven-
  deps-2.tar.gz. For scala-2.10.4, I added the sed and
  scala-2.10.4-maven.deps.tar.gz. I have not tested behind a firewall, but I do
  not see any downloads during the build.

*scala-2.11.2 (04 Oct 2014)

  04 Oct 2014; Mark Wright <gienah@gentoo.org> +files/scala-2.11.2-no-git.patch,
  +scala-2.11.2.ebuild:
  Bump scala to 2.11.2, fixes Bug 517984 - dev-lang/scala-2.11.2 version bump,
  thanks to Joel for reporting.

*scala-2.11.1 (08 Jul 2014)

  08 Jul 2014; Mark Wright <gienah@gentoo.org> +files/scala-2.11.1-no-git.patch,
  +scala-2.11.1.ebuild:
  Bump scala to 2.11.1, fixes Bug 508328 - dev-lang/scala-2.11.1 version bump,
  thanks to Joel for reporting.

*scala-2.10.4 (06 Jul 2014)

  06 Jul 2014; Mark Wright <gienah@gentoo.org> +files/scala-2.10.4-no-git.patch,
  +scala-2.10.4.ebuild:
  Bump scala to 2.10.4 as requested in Bug 505582 - dev-lang/scala-2.10.4
  version bump, thanks to Joel for reporting.

*scala-2.10.3 (12 Feb 2014)

  12 Feb 2014; Mark Wright <gienah@gentoo.org>
  +files/scala-2.10.3-maven-deps.patch, +files/scala-2.10.3-no-git.patch,
  +scala-2.10.3.ebuild, scala-2.10.2.ebuild: