@@ -78,6 +78,7 @@ DIST scala-2.11.1-jsoup-1.3.1.jar 133835 SHA256 5695a4351412dbb21cfc9f09a31d66df
 DIST scala-2.11.1-jsr166_and_extra.jar 728574 SHA256 e33a59e291bae8dbd2b37c6a4d5eae459a313db3a588f42c59ac5fd8edf6e13b SHA512 40d949cfefc5111c79b79f085657d56aa046d1b318e6ad78de5869f61a6515c2076b70344be5ae3fb93a7b3f54f46a129e2536515b258e0d5bf2e670c5001306 WHIRLPOOL ef8414d7862736cf072ff60fff5008f38dadcf826364cf21929fdfca7d331872d8097e6a6907dd500ef5d5a68964d8c2ed9ebeedf6470dc25ede269c1a8172b5
 DIST scala-2.11.1-macro210.jar 2065 SHA256 c0796c2defec3dcf2f786945fbdced0448a958bb68eaef71efcf5c14184f28ff SHA512 13c119afc4400f1531cad0cf38ab1652fce641090c11bff8f044a0d7f99df90412241ae78d5c623b7ecff1ce4720ae51fca4324f51bde0331e12f2e6e9898dd0 WHIRLPOOL 33b843583c02bd25db09df595026822f4e81d6a80c2cce3a7099dfb77dda80f595e5392e843c786a63b8d430d8acf53c20bc669ec1272b0f58c52cb0b67408b5
 DIST scala-2.11.1-maven-ant-tasks-2.1.1.jar 1314262 SHA256 b8891b4a90aca2793ad385ab57216f51c4879c6ab7e927354f407b46510cab51 SHA512 e3f0ff1d41ec31b2b64acb2ebcc175709714033589cb8e763f94aa80359c84f5d960c46dae713c9e37e1a09b977e7da617f8fe10a5b6fb30c55efd19bc307e68 WHIRLPOOL 73c44ea6aba4a3c697f64d08475b4c17bdc929ac9f320a25714fbe7cdc2939ad334deb7a90eb6c950cce8ba402d19bc2615a104788bafed7d247b997d3146743
+DIST scala-2.11.1-maven-deps.tar.gz 77191352 SHA256 7d0690ae465806fa01249cf4b04cd75485593db68c5751d681daadd4f29b44e9 SHA512 2e25beaaa669001aad0c3365a1ade7715ce28cbeb7cee6b082cde14f572740ac9950c8c94eb0b8f5ac2def37228e34d707087b8e822ed3aafc03bce38923d6dc WHIRLPOOL 7d409c86b201a3edc14201e0c458e9e23d4a3f0c0139e6aec0ca81bed67cf49c64a625fbd2f8a1d79778336c4f1f372f1029cc99d2b871302f8be120817fde9b
 DIST scala-2.11.1-methvsfield.jar 609 SHA256 730b33d098319d969760f2250dc6924c9f85f94a8a2eb2b2a025dcf05378d9c6 SHA512 6db923ed7059bc91c8442d5804ccd8336e94f5202b3dcc348a4eb5026f09e1e86862f6e94818beae9ad42fcdc8e51df4d59a27109903a8ccb78054425ae47a71 WHIRLPOOL d5362d5fc2795ff0671f386429840bb4f84173f9308e34c2b0eb585fb7cacbd308ab87c42f2fd407597abc4f010e8ffde600dd30addcd63c2d71c2d5f22f1582
 DIST scala-2.11.1-nest.jar 2920 SHA256 3c7cf1a1b9fe9ad2abf3bfcedaa17a976c72f4bccb0e0c7dbcf7ecf27bc20aa5 SHA512 5eaaa870e06b5e00efb1f6ccced71343e8aa01578ea2b320b2d051f2df3713df9c500f074cc74a9e3c5cc509e03cf9c71265329bf2ddb3e82cb331524202fa38 WHIRLPOOL 1d73b612946a6a226841d3e0ad8cb3ebb06997c70e94feb1f9236e4e58a93c429cc7cdecaa4175fd5b78920253bcc157f798593b6a8eacb873b3d9a51284be34
 DIST scala-2.11.1-push.jar 8886289 SHA256 58eb2b8c501bbff0e78074a058e3fc160012a80952c1cc96ed301d8a08d7e98d SHA512 b5539d381c8978ac57fc4258696e4cb552f47917178152b38b5683e42ed60da4d9da198a0344652f201541a71f92afd2ac8b3c3d3ec5266a8c222e9661d8a06a WHIRLPOOL 8fa6522a0fd9939f4ffd443b55e7a5adbb93a9dc5cbad569ccecd6be77ecd259eadbdb16c2c7eab6d9f175fbf33746faf9c41cf4d1050e7f576b86119301e126
@@ -97,6 +98,7 @@ DIST scala-2.11.2-jsoup-1.3.1.jar 133835 SHA256 5695a4351412dbb21cfc9f09a31d66df
 DIST scala-2.11.2-jsr166_and_extra.jar 728574 SHA256 e33a59e291bae8dbd2b37c6a4d5eae459a313db3a588f42c59ac5fd8edf6e13b SHA512 40d949cfefc5111c79b79f085657d56aa046d1b318e6ad78de5869f61a6515c2076b70344be5ae3fb93a7b3f54f46a129e2536515b258e0d5bf2e670c5001306 WHIRLPOOL ef8414d7862736cf072ff60fff5008f38dadcf826364cf21929fdfca7d331872d8097e6a6907dd500ef5d5a68964d8c2ed9ebeedf6470dc25ede269c1a8172b5
 DIST scala-2.11.2-macro210.jar 2065 SHA256 c0796c2defec3dcf2f786945fbdced0448a958bb68eaef71efcf5c14184f28ff SHA512 13c119afc4400f1531cad0cf38ab1652fce641090c11bff8f044a0d7f99df90412241ae78d5c623b7ecff1ce4720ae51fca4324f51bde0331e12f2e6e9898dd0 WHIRLPOOL 33b843583c02bd25db09df595026822f4e81d6a80c2cce3a7099dfb77dda80f595e5392e843c786a63b8d430d8acf53c20bc669ec1272b0f58c52cb0b67408b5
 DIST scala-2.11.2-maven-ant-tasks-2.1.1.jar 1314262 SHA256 b8891b4a90aca2793ad385ab57216f51c4879c6ab7e927354f407b46510cab51 SHA512 e3f0ff1d41ec31b2b64acb2ebcc175709714033589cb8e763f94aa80359c84f5d960c46dae713c9e37e1a09b977e7da617f8fe10a5b6fb30c55efd19bc307e68 WHIRLPOOL 73c44ea6aba4a3c697f64d08475b4c17bdc929ac9f320a25714fbe7cdc2939ad334deb7a90eb6c950cce8ba402d19bc2615a104788bafed7d247b997d3146743
+DIST scala-2.11.2-maven-deps.tar.gz 84139566 SHA256 9006434636902fdd9cddbec38f0d81e017191998ee1eb1ddfb1792db1cbabc24 SHA512 54b888af964a5e2731fad20481253150d60859a5243c72873e09799dac665f315e1449d89f86cb311582085d34d7c1c661dee41f64084efb943feef8d4036602 WHIRLPOOL 352a93e287f2e9f9f1e2e55024f29541f4d82de5e9406c40362324c633e3a5b26257c801a0e37f77a56f6487eb2ac3478112389402ac762fb08af1f03dcbe2d3
 DIST scala-2.11.2-methvsfield.jar 609 SHA256 730b33d098319d969760f2250dc6924c9f85f94a8a2eb2b2a025dcf05378d9c6 SHA512 6db923ed7059bc91c8442d5804ccd8336e94f5202b3dcc348a4eb5026f09e1e86862f6e94818beae9ad42fcdc8e51df4d59a27109903a8ccb78054425ae47a71 WHIRLPOOL d5362d5fc2795ff0671f386429840bb4f84173f9308e34c2b0eb585fb7cacbd308ab87c42f2fd407597abc4f010e8ffde600dd30addcd63c2d71c2d5f22f1582
 DIST scala-2.11.2-nest.jar 2920 SHA256 3c7cf1a1b9fe9ad2abf3bfcedaa17a976c72f4bccb0e0c7dbcf7ecf27bc20aa5 SHA512 5eaaa870e06b5e00efb1f6ccced71343e8aa01578ea2b320b2d051f2df3713df9c500f074cc74a9e3c5cc509e03cf9c71265329bf2ddb3e82cb331524202fa38 WHIRLPOOL 1d73b612946a6a226841d3e0ad8cb3ebb06997c70e94feb1f9236e4e58a93c429cc7cdecaa4175fd5b78920253bcc157f798593b6a8eacb873b3d9a51284be34
 DIST scala-2.11.2-push.jar 8886289 SHA256 58eb2b8c501bbff0e78074a058e3fc160012a80952c1cc96ed301d8a08d7e98d SHA512 b5539d381c8978ac57fc4258696e4cb552f47917178152b38b5683e42ed60da4d9da198a0344652f201541a71f92afd2ac8b3c3d3ec5266a8c222e9661d8a06a WHIRLPOOL 8fa6522a0fd9939f4ffd443b55e7a5adbb93a9dc5cbad569ccecd6be77ecd259eadbdb16c2c7eab6d9f175fbf33746faf9c41cf4d1050e7f576b86119301e126
@@ -121,17 +123,17 @@ EBUILD scala-2.10.2-r1.ebuild 8549 SHA256 469d65299edb517545f1af2769a6c76b8eaa5d
 EBUILD scala-2.10.2.ebuild 8497 SHA256 f124567a162ac34ebe2fab041c8cc8dd7cb2383e2fa186b5b02ffe4287b47d94 SHA512 6efde5fee8653752982a099ec9bc4b8d8edad5123e534ea76a8cfe44577719a8cb224ec8e031d3517f7cf9631c6fd2890351dc015ca9c33e5b2fcafced6b1795 WHIRLPOOL 1268e2184073f78e1ae7833df8ca9fee40a986972f222994c54e74876e56369d54cfdebec27cfb3af4841d9f41916ed4f23f171ca34a57c7f4157e6b1b82a89e
 EBUILD scala-2.10.3.ebuild 8380 SHA256 cb2e3dbd1b9388a979876c33a1b6671c25e9018e8ed3bc66d50b96ddb48f9258 SHA512 8c67d0c74dd9ea5402cc5fb3f4c629962bd5a43d7a5711f90457838e79ac6edc03bd6678d8ed584cc1db8943f00f34226558e1a7b51d727e9f654b8a69f9b9ea WHIRLPOOL 934419b4bad0af723a2d500a17d53cb23df9280e5c427f53fb641fb639765f472f0f18f4c7956366dfbeaf8b83ac346232362184e6a59968b80bf27128a30ed6
 EBUILD scala-2.10.4.ebuild 9000 SHA256 a7d77d6204a08301ef1ad3c989ba2aed31754360cd2aeddfef4708d43d63488c SHA512 096482891a53eafcdf64db6e57de7d82f55b8a2f468fac34adf296df3443b8d69cf2ed550ea84187c7ae4f730cf5ec47b3c82ca2497cd490bf8fa958213eca63 WHIRLPOOL 9b93bdeb2d23bcdfe00817827189e3facaff5ac950eae5d8cb9b677839e3a1112695ddabf9fcf6334c8649b664cdc5fdb5f8f297376217c751eb6f22e7f84c3c
-EBUILD scala-2.11.1.ebuild 7072 SHA256 ccd197b8e5da49ad2a16138c88377cd5ac7624fefcd555b04d9120597f7512ce SHA512 14706326cba8067f92f5953a8a799064e88c64208ea8f1f3b560064b959abe6e085e0d48a749cfa169d6f3e3f52e637ca0ae7fea75d2fb4a14058f14746e2a9b WHIRLPOOL 76a7b74a62322ae9c4d5a9c6950558a9a539d8402f59967489c1378e4fd65cc022e13ddd95f7a7eab67136dd4786ce5ceea293086ae4e9e5e90cd7f29527bdc5
-EBUILD scala-2.11.2.ebuild 7072 SHA256 3937188cd46b1e014ac7f2888740f56df436319f86e397ba523cd4c16b0916e2 SHA512 596af4c7773db873516e7531a10ba1c1bb5a6c7ccfc996bb114141310df3452cd2e4410c503bf35ae76d4d0e2e1da2bedc74767d341e1a1df4bf435829826e93 WHIRLPOOL 9fbd5cce76881f69509a4e4021a834050ae8ac4cda32a4db8196d8b697dbc420a4f3d73340850b728b05d0ccf41005affeebb92eee8a1e4b4e505e0c1fbda3b5
+EBUILD scala-2.11.1.ebuild 7600 SHA256 d7757802ecca88f1a8560813fab332327a25ad9d16c767f9d67d8793a3345a83 SHA512 41ba84af5b9b665c523d8cd4e7ad6812c0c622b0d1037e5dcd919e5c92ad5380e07d12aa93036b134599e647c4d0f03e6738e41025b45bf3204f66a9937fe5e5 WHIRLPOOL 7770818c11496ac9911210cdcb71d12b07e75f0be54024f5ca8c98b9e72b9181b8d4188a46fb81e843c3681bb280704e04b11d9e99841483d398cfd90228d734
+EBUILD scala-2.11.2.ebuild 7600 SHA256 141aaa9bad86675fe00fc3cf2f33ad46673ecb592e373cd6ab5dac3e058479a9 SHA512 31aae0e6206b96bfbd4ec4b958552055cdb8c8eb3acde5d4bfa31a5d43417784ecd6e62d8871fb5f84d9666bee5c02c824007b81231f7efeb5cd3630407a529e WHIRLPOOL 235b00be38c7ee8ece67d71468f6d38728881f4d647e76a23313a67b7b8b547d270d31d15c9cac26312328589b4126e4b59b0fe7dbb99e78d98b517a7c90956a
 EBUILD scala-2.9.0.1.ebuild 3889 SHA256 4193799a5ee6b63411c20a99c4d7422d5a596d795236a508fe536a316ac2013d SHA512 924bcd7d1f180b57607579e265fa945ac80c7bb18ecf394c432c21e62dee970c868651363eaa3f49465c1d6334df8314c77761ea46e1f9d1f43b2b7537108ded WHIRLPOOL bb2ec1cc4015241fb91b4612cde5f1b36c10aadc5f44390bbf2b579f6044fad112c6794504d84d2aca565843271951aeb37a3230e314d9bec458ee4841bdf03c
 EBUILD scala-2.9.1.ebuild 3902 SHA256 5850b0694255b672412d830f6bcabda4eb3506ad78a5cd6fc58c974606024fcb SHA512 e11f585934b7e51439b9a033b74a6f20dd090dcab6956838c0fcb85b00e81e980aa7496dfa20b2c9fdd1247838323e9d3392f391716dec320a5e4deaa70f1c45 WHIRLPOOL aa1de98a6582bc466b60445deb44363aa3d1a392dce18419c2524375aaec0f60263a24ed8e15ef8f3c8fc00f87172dc017cdec1d3edb69681906c646dc81903e
 EBUILD scala-2.9.2.ebuild 3962 SHA256 e810798955120343c29b7e92fbca46c0da311472533a23cb7a2e85e408111259 SHA512 6109c0722859a29910525cfbeae2ea665f50931e05268e2891e3bd56665d71a6a697fdb1fc8e6038df0359bace8ae9d80358f2742edb995bcd3cf388e25d5264 WHIRLPOOL 29ec1f92755b0894077db0f24bb4bffc6ad5915b203b4786deb59b7fa86ece7ae7ffc6f18c2540f9cb72e6a627c495ab5fd79273b38173d9293eb43db48d57c2
-MISC ChangeLog 8429 SHA256 20eb2d2fba61e0fe87a0136c09deffd63a2ac07eeb35576ad98691c777b4cab5 SHA512 ed88df393d343065ce7a0e9f20fd25689aaf78bb4d19881a970c5fc013cfbc8cccd28e5443b5843221bcc2d16090083a808e6dbcaeaada8df36d5105dfa10906 WHIRLPOOL 8d0dfb3c725c5bc983adf47e9ca2a7c6b2655b9053928c776f59375850a1b334af69ea478be1c8d806800578ca318aba9eb433bfdeab506350acee10812b0b6a
+MISC ChangeLog 8937 SHA256 eae9682ed834089272cbb57b2e57da39559d00d866acc7534b1f07f0648ab239 SHA512 26a790b378aa7591cad4dea5e5e3faf2e1b8bca576556e3574e2044c7d8035c7ce25e6adaafb434f41d438667bfcad38ac761057025cf3290d5d771c7c96e888 WHIRLPOOL d32ffe095c3f0ca32139802ee5d672647f18c8cb13b1f4f5ccdbd31d6e0e960c89bbe5c61bd52b75ee64db3cc28bd67a817b2fe6b8cfc1e46a5a48d38c65693e
 MISC metadata.xml 317 SHA256 9ec2b0918811b14be0850dabea428b6b976e7eae70e97f281f85533d4e66bc94 SHA512 38504fb1d7acf7cf794ab67864c2f4ef99d569d9981753415dc6bfe3128bcf31568f0134d56f115644e1dafc18d32c9d51de252cb49de842ea2a32d71225c088 WHIRLPOOL 4e11d4be40d7f37a3b775e5a89f901a8c44d4291411f98783669b3129e671294d103e45dbabef350cc4469aaef2567d3fc9fb27f99ed476cd07a416a4ede71a1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlQyC/0ACgkQoBEVQmGOlx8RWgEAwFLzL86ZJ88aaH6Tv9iVHi0T
-qwHtXfUQ513NN3x+FcsA/inlw3SYGD2ic0hSy84TJUqiFrmgUZWJWwn9lphyZbPX
-=O9Z4
+iF4EAREIAAYFAlQyLfUACgkQoBEVQmGOlx/G0AD/SBetBzTKXuBiXum9DfC39+PQ
+76GMCeTSik0ViAaAuGMA/0tMYkitVGbn3uGsriW9zvz44nUM/KG59AXtnJs8jqIv
+=kH+M
 -----END PGP SIGNATURE-----
